bug fix: active ura dora ron type btn bgcolor on hover shows wrong color

--- a/style/animation.css
+++ b/style/animation.css
@@ -73,6 +73,10 @@
 .uraDora-button:hover .revealedUraDora-icon {
 	animation: moveUpAndDisappear 0.5s forwards, moveUpAndReappearWithAllConcealedTile 0.5s 0.3s forwards, flipUraDora 0.5s 0.8s forwards;
 }
+.uraDora-button:hover.activeTileType .revealedUraDora-icon {
+	animation: moveUpAndDisappear 0.5s forwards, active-moveUpAndReappearWithAllConcealedTile 0.5s 0.3s forwards,
+		active-flipUraDora 0.5s 0.8s forwards;
+}
 @keyframes moveUpAndDisappear {
 	0% {
 		transform: translateY(0);
@@ -107,12 +111,36 @@
 		opacity: 1;
 	}
 }
+@keyframes active-moveUpAndReappearWithAllConcealedTile {
+	0% {
+		background-color: #d1a691;
+	}
+	1% {
+		transform: translateY(100%);
+		opacity: 0;
+	}
+	100% {
+		transform: translateY(0);
+		background-color: #d1a691;
+		opacity: 1;
+	}
+}
 @keyframes flipUraDora {
 	0% {
 		transform: rotateX(180deg);
 	}
 	100% {
 		background-color: #d1a691;
+		transform: rotateX(0deg);
+	}
+}
+@keyframes active-flipUraDora {
+	0% {
+		transform: rotateX(180deg);
+		background-color: #d1a691;
+	}
+	100% {
+		background-color: beige;
 		transform: rotateX(0deg);
 	}
 }
